--- a/client/package.json
+++ b/client/package.json
@@ -21,8 +21,10 @@
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^10.2.0",
+    "ngx-toastr": "^16.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "xng-breadcrumb": "^9.0.0",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
