--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
       <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.12" />
+      <PackageReference Include="StackExchange.Redis" Version="2.6.86" />
   </ItemGroup>
 
   <PropertyGroup>
