--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,12 +2,17 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Information"
     }
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data source=skinet.db",
+    "IdentityConnection": "Data source=identity.db",
     "Redis": "localhost"
+  },
+  "Token":{
+    "Key":"this is my custom Secret key for authentication this is my custom Secret key for authentication",
+    "Issuer":"https://localhost:5001"
   },
   "ApiUrl":"https://localhost:5001/"
 }
