--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -14,5 +14,5 @@
     "Key":"this is my custom Secret key for authentication this is my custom Secret key for authentication",
     "Issuer":"https://localhost:5001"
   },
-  "ApiUrl":"https://localhost:5001/"
+  "ApiUrl":"https://localhost:5001/Content"
 }
