--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,19 @@ services:
     ports:
       - 8081:8081
     depends_on:
-      - redis
+      - redis 
+
+  db:
+    image: postgres
+    environment:
+      POSTGRES_PASSWORD: secret
+      POSTGRES_USER: appuser
+    ports:
+      - 5432:5432
+    volumes:
+      - postgres-data:/data
     
 volumes:
   redis-data:
+  postgres-data:
+
