--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,13 +6,14 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data source=skinet.db",
-    "IdentityConnection": "Data source=identity.db",
+    "DefaultConnection": "Server=localhost; Port=5432; User Id=appuser; Password=secret; Database=skinet",
+    "IdentityConnection": "Server=localhost; Port=5432; User Id=appuser; Password=secret; Database=identity",
     "Redis": "localhost"
   },
   "Token":{
     "Key":"this is my custom Secret key for authentication this is my custom Secret key for authentication",
     "Issuer":"https://localhost:5001"
-  },
-  "ApiUrl":"https://localhost:5001/Content"
+  },  
+  "ApiUrl": "https://localhost:5001/Content/"
+
 }
