--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@angular/forms": "^15.2.0",
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
+    "ng2-currency-mask": "^13.0.3",
     "@angular/router": "^15.2.0",
     "@stripe/stripe-js": "^2.1.0",
     "bootstrap": "^5.1.3",
